Calculate bitrate manually if necessary

--- a/DemoWpf/Views/MainWindow.xaml
+++ b/DemoWpf/Views/MainWindow.xaml
@@ -292,8 +292,8 @@
                                                 <Run Text="Quality:" />
                                                 <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding VideoQualityLabel, Mode=OneWay}" />
                                                 <Run />
-                                                <Run Text="Container:" />
-                                                <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding Container, Mode=OneWay}" />
+                                                <Run Text="Format:" />
+                                                <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding Format, Mode=OneWay}" />
                                                 <Run />
                                                 <Run Text="Encoding:" />
                                                 <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding VideoEncoding, Mode=OneWay}" /><Run Text="/" /><Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding AudioEncoding, Mode=OneWay}" />
@@ -333,8 +333,8 @@
                                                 <Run Text="Quality:" />
                                                 <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding VideoQualityLabel, Mode=OneWay}" />
                                                 <Run />
-                                                <Run Text="Container:" />
-                                                <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding Container, Mode=OneWay}" />
+                                                <Run Text="Format:" />
+                                                <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding Format, Mode=OneWay}" />
                                                 <Run />
                                                 <Run Text="Encoding:" />
                                                 <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding VideoEncoding, Mode=OneWay}" />
@@ -371,8 +371,8 @@
 
                                             <!--  Stream info  -->
                                             <TextBlock Margin="6,0,0,0" VerticalAlignment="Center">
-                                                <Run Text="Container:" />
-                                                <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding Container, Mode=OneWay}" />
+                                                <Run Text="Format:" />
+                                                <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding Format, Mode=OneWay}" />
                                                 <Run />
                                                 <Run Text="Encoding:" />
                                                 <Run Foreground="{DynamicResource PrimaryTextBrush}" Text="{Binding AudioEncoding, Mode=OneWay}" />
